--- a/stylesheets/scss/_forms.scss
+++ b/stylesheets/scss/_forms.scss
@@ -5,6 +5,14 @@
     max-width: 100%;
   }
 
+  select::-ms-expand {
+      display: none;
+  }
+
+  textarea {
+    -ms-overflow-style: -ms-autohiding-scrollbar;
+  }
+
   .form_area,
   .form {
 
@@ -123,10 +131,10 @@
   }
 
   .form_field_select {
-    padding: 7px 20px 6px 9px;
+    padding: 7px 30px 6px 9px;
     text-indent: .01px;
     text-overflow: '';
-    background-position: 97.5% 13px;
+    background-position: 96% 15px;
     background-repeat: no-repeat;
     border: none;
     cursor: pointer;
